CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(CHECK_CXX_STANDARD 11)

SET(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
SET(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
SET(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)

SET(GLEW_STATIC)

ADD_SUBDIRECTORY(./glfw-3.2.1)

PROJECT(learningOpenGL)

ADD_EXECUTABLE(ep0 Ep0/main.cpp)
ADD_EXECUTABLE(ep1 Ep1/main.cpp)
ADD_EXECUTABLE(ep2 Ep2/main.cpp)
ADD_EXECUTABLE(ep3 Ep3/main.cpp)

TARGET_LINK_LIBRARIES(ep0 glfw)
TARGET_LINK_LIBRARIES(ep1 glfw)
TARGET_LINK_LIBRARIES(ep2 glfw)
TARGET_LINK_LIBRARIES(ep3 glfw)

FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(GLEW REQUIRED)
FIND_PACKAGE(GLUT REQUIRED)

TARGET_INCLUDE_DIRECTORIES(ep0 PRIVATE ${OPENGL_INCLUDE_DIR} ${GLEW_INCLUDE_DIRS})
TARGET_INCLUDE_DIRECTORIES(ep1 PRIVATE ${OPENGL_INCLUDE_DIR} ${GLEW_INCLUDE_DIRS})
TARGET_INCLUDE_DIRECTORIES(ep2 PRIVATE ${OPENGL_INCLUDE_DIR} ${GLEW_INCLUDE_DIRS})
TARGET_INCLUDE_DIRECTORIES(ep3 PRIVATE ${OPENGL_INCLUDE_DIR} ${GLEW_INCLUDE_DIRS})

TARGET_LINK_LIBRARIES(ep0 ${OPENGL_gl_LIBRARY} ${GLEW_LIBRARIES})
TARGET_LINK_LIBRARIES(ep1 ${OPENGL_gl_LIBRARY} ${GLEW_LIBRARIES})
TARGET_LINK_LIBRARIES(ep2 ${OPENGL_gl_LIBRARY} ${GLEW_LIBRARIES})
TARGET_LINK_LIBRARIES(ep3 ${OPENGL_gl_LIBRARY} ${GLEW_LIBRARIES})
