CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(CHECK_CXX_STANDARD 11)

SET(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
SET(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
SET(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)

SET(GLEW_STATIC)

ADD_SUBDIRECTORY(./glfw-3.2.1)

PROJECT(learningOpenGL)

ADD_EXECUTABLE(ep0 Ep0/main.cpp)
ADD_EXECUTABLE(ep1 Ep1/main.cpp)
ADD_EXECUTABLE(ep2 Ep2/main.cpp)
ADD_EXECUTABLE(ep3 Ep3/main.cpp)
ADD_EXECUTABLE(ep4-5 Ep4-5/main.cpp)
ADD_EXECUTABLE(ep6 Ep6/main.cpp)
ADD_EXECUTABLE(ep7 Ep7/main.cpp)
ADD_EXECUTABLE(ep8 Ep8/main.cpp)
ADD_EXECUTABLE(ep9 Ep9/main.cpp)
ADD_EXECUTABLE(ep10 Ep10/main.cpp)
ADD_EXECUTABLE(ep11-12-13-14 Ep11-12-13-14/Renderer.cpp Ep11-12-13-14/VertexBuffer.cpp Ep11-12-13-14/IndexBuffer.cpp Ep11-12-13-14/VertexBufferLayout.cpp Ep11-12-13-14/VertexArray.cpp Ep11-12-13-14/Shader.cpp Ep11-12-13-14/main.cpp)
ADD_EXECUTABLE(ep15-16 Ep15-16/vendor/stb_image/stb_image.cpp Ep15-16/Texture.cpp Ep15-16/Renderer.cpp Ep15-16/VertexBuffer.cpp Ep15-16/IndexBuffer.cpp Ep15-16/VertexBufferLayout.cpp Ep15-16/VertexArray.cpp Ep15-16/Shader.cpp Ep15-16/main.cpp)
ADD_EXECUTABLE(ep17-18-19 Ep17-18-19/vendor/stb_image/stb_image.cpp Ep17-18-19/Texture.cpp Ep17-18-19/Renderer.cpp Ep17-18-19/VertexBuffer.cpp Ep17-18-19/IndexBuffer.cpp Ep17-18-19/VertexBufferLayout.cpp Ep17-18-19/VertexArray.cpp Ep17-18-19/Shader.cpp Ep17-18-19/main.cpp)

TARGET_LINK_LIBRARIES(ep0 glfw)
TARGET_LINK_LIBRARIES(ep1 glfw)
TARGET_LINK_LIBRARIES(ep2 glfw)
TARGET_LINK_LIBRARIES(ep3 glfw)
TARGET_LINK_LIBRARIES(ep4-5 glfw)
TARGET_LINK_LIBRARIES(ep6 glfw)
TARGET_LINK_LIBRARIES(ep7 glfw)
TARGET_LINK_LIBRARIES(ep8 glfw)
TARGET_LINK_LIBRARIES(ep9 glfw)
TARGET_LINK_LIBRARIES(ep10 glfw)
TARGET_LINK_LIBRARIES(ep11-12-13-14 glfw)
TARGET_LINK_LIBRARIES(ep15-16 glfw)
TARGET_LINK_LIBRARIES(ep17-18-19 glfw)

FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(GLEW REQUIRED)
FIND_PACKAGE(GLUT REQUIRED)

TARGET_INCLUDE_DIRECTORIES(ep0 PRIVATE ${OPENGL_INCLUDE_DIR} ${GLEW_INCLUDE_DIRS})
TARGET_INCLUDE_DIRECTORIES(ep1 PRIVATE ${OPENGL_INCLUDE_DIR} ${GLEW_INCLUDE_DIRS})
TARGET_INCLUDE_DIRECTORIES(ep2 PRIVATE ${OPENGL_INCLUDE_DIR} ${GLEW_INCLUDE_DIRS})
TARGET_INCLUDE_DIRECTORIES(ep3 PRIVATE ${OPENGL_INCLUDE_DIR} ${GLEW_INCLUDE_DIRS})
TARGET_INCLUDE_DIRECTORIES(ep4-5 PRIVATE ${OPENGL_INCLUDE_DIR} ${GLEW_INCLUDE_DIRS})
TARGET_INCLUDE_DIRECTORIES(ep6 PRIVATE ${OPENGL_INCLUDE_DIR} ${GLEW_INCLUDE_DIRS})
TARGET_INCLUDE_DIRECTORIES(ep7 PRIVATE ${OPENGL_INCLUDE_DIR} ${GLEW_INCLUDE_DIRS})
TARGET_INCLUDE_DIRECTORIES(ep8 PRIVATE ${OPENGL_INCLUDE_DIR} ${GLEW_INCLUDE_DIRS})
TARGET_INCLUDE_DIRECTORIES(ep9 PRIVATE ${OPENGL_INCLUDE_DIR} ${GLEW_INCLUDE_DIRS})
TARGET_INCLUDE_DIRECTORIES(ep10 PRIVATE ${OPENGL_INCLUDE_DIR} ${GLEW_INCLUDE_DIRS})
TARGET_INCLUDE_DIRECTORIES(ep11-12-13-14 PRIVATE ${OPENGL_INCLUDE_DIR} ${GLEW_INCLUDE_DIRS})
TARGET_INCLUDE_DIRECTORIES(ep15-16 PRIVATE ${OPENGL_INCLUDE_DIR} ${GLEW_INCLUDE_DIRS})
TARGET_INCLUDE_DIRECTORIES(ep17-18-19 PRIVATE ${OPENGL_INCLUDE_DIR} ${GLEW_INCLUDE_DIRS})

TARGET_LINK_LIBRARIES(ep0 ${OPENGL_gl_LIBRARY} ${GLEW_LIBRARIES})
TARGET_LINK_LIBRARIES(ep1 ${OPENGL_gl_LIBRARY} ${GLEW_LIBRARIES})
TARGET_LINK_LIBRARIES(ep2 ${OPENGL_gl_LIBRARY} ${GLEW_LIBRARIES})
TARGET_LINK_LIBRARIES(ep3 ${OPENGL_gl_LIBRARY} ${GLEW_LIBRARIES})
TARGET_LINK_LIBRARIES(ep4-5 ${OPENGL_gl_LIBRARY} ${GLEW_LIBRARIES})
TARGET_LINK_LIBRARIES(ep6 ${OPENGL_gl_LIBRARY} ${GLEW_LIBRARIES})
TARGET_LINK_LIBRARIES(ep7 ${OPENGL_gl_LIBRARY} ${GLEW_LIBRARIES})
TARGET_LINK_LIBRARIES(ep8 ${OPENGL_gl_LIBRARY} ${GLEW_LIBRARIES})
TARGET_LINK_LIBRARIES(ep9 ${OPENGL_gl_LIBRARY} ${GLEW_LIBRARIES})
TARGET_LINK_LIBRARIES(ep10 ${OPENGL_gl_LIBRARY} ${GLEW_LIBRARIES})
TARGET_LINK_LIBRARIES(ep11-12-13-14 ${OPENGL_gl_LIBRARY} ${GLEW_LIBRARIES})
TARGET_LINK_LIBRARIES(ep15-16 ${OPENGL_gl_LIBRARY} ${GLEW_LIBRARIES})
TARGET_LINK_LIBRARIES(ep17-18-19 ${OPENGL_gl_LIBRARY} ${GLEW_LIBRARIES})
